# backtracking-examples

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  binary_words_of_length_n.c  burn.c  coins.c  dresses.c  knights.c  maze.c  n_queens.c  parenthesis.c  permutations_from_0_to_K.c  subsum_of_group.c  unique_permutations_from_0_to_K.c  unique_sum_permutations.c
